--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -450,4 +450,23 @@
     <string name="dialog_delete_title">Eliminar</string>
     <string name="dialog_delete_message">¿Eliminar el elemento seleccionado?</string>
     <string name="app_ops_settings_summary">Controlar permisos de aplicaciones</string>
+	
+    <!-- Screen state service -->
+    <string name="screen_state_toggles_title">Acciones al apagar pantalla</string>
+    <string name="screen_state_toggles_enable_title">Habilitar</string>
+    <string name="screen_state_toggles_enable_summary">Las acciones se ejecutarán al apagar la pantalla. Al encenderla, el estado anterior se restaurará.</string>
+    <string name="screen_state_toggles_mobile_title">Redes móviles</string>
+    <string name="screen_state_toggles_location_title">Ubicación</string>
+    <string name="screen_state_toggles_twog">Cambiar a 2G</string>
+    <string name="screen_state_toggles_twog_summary">Modo de red se cambiará a 2G al apagar la pantalla</string>
+    <string name="screen_state_toggles_threeg">Cambiar a 3G</string>
+    <string name="screen_state_toggles_threeg_summary">Modo de red se cambiará a 3G al apagar la pantalla</string>
+    <string name="screen_state_toggles_gps">Desactivar GPS</string>
+    <string name="screen_state_toggles_gps_summary">Servicio de localización basado en GPS se desactivará al apagar la pantalla</string>
+    <string name="screen_state_toggles_mobile_data">Desactivar los datos móviles</string>
+    <string name="screen_state_toggles_mobile_data_summary">Los datos móviles se deshabilatarán al apagar la pantalla</string>
+    <string name="screen_state_off_delay_title">Retardo de las acciones con la pantalla apagada</string>
+    <string name="screen_state_off_delay_summary">Número de segundos a esperar antes de realizar acciones después de apagar la pantalla</string>
+    <string name="screen_state_on_delay_title">Retardo de las acciones con la pantalla encendida</string>
+    <string name="screen_state_on_delay_summary">Número de segundos a esperar antes de realizar acciones después de apagar la pantalla</string>
 </resources>
